@@ -79,32 +79,6 @@ const int SHIFT_KEYMAP[][2] = {
   {DOM_VK_9, '('},
   {DOM_VK_COLON, ':'},
   {DOM_VK_EQUALS, '+'},
-  {DOM_VK_A, 'a'},
-  {DOM_VK_B, 'b'},
-  {DOM_VK_C, 'c'},
-  {DOM_VK_D, 'd'},
-  {DOM_VK_E, 'e'},
-  {DOM_VK_F, 'f'},
-  {DOM_VK_G, 'g'},
-  {DOM_VK_H, 'h'},
-  {DOM_VK_I, 'i'},
-  {DOM_VK_J, 'j'},
-  {DOM_VK_K, 'k'},
-  {DOM_VK_L, 'l'},
-  {DOM_VK_M, 'm'},
-  {DOM_VK_N, 'n'},
-  {DOM_VK_O, 'o'},
-  {DOM_VK_P, 'p'},
-  {DOM_VK_Q, 'q'},
-  {DOM_VK_R, 'r'},
-  {DOM_VK_S, 's'},
-  {DOM_VK_T, 't'},
-  {DOM_VK_U, 'u'},
-  {DOM_VK_V, 'v'},
-  {DOM_VK_W, 'w'},
-  {DOM_VK_X, 'x'},
-  {DOM_VK_Y, 'y'},
-  {DOM_VK_Z, 'z'},
   {'`', '~'},
   {'-', '_'},
   {'=', '+'},
